--- a/src/main/resources/templates/test_upload.html
+++ b/src/main/resources/templates/test_upload.html
@@ -35,7 +35,7 @@
         var formdata = new FormData();
         //var formdata=new FormData($("#form1")[0]);//获取文件法一
         formdata.append("file", $(obj)[0].files[0]);//获取文件法二
-        formdata.append("space", "uquiz_video");
+        formdata.append("space", "apolo_image");
         formdata.append("owner", "-1");
         formdata.append("name", "-1");
         $.ajax({
